[package]
name = "mc_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc-query = "1.0.1"
rand = "0.8.5"
tokio = "1.37.0"
tokio-rusqlite = "=0.4.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde_json = "1.0.115"
bytes = "1.6.0"
thiserror = "1.0.58"
